Added  Product View Action in controller And Hyperlink on product name on UI

--- a/DotNetCore/MVC/ShopEase/Views/Product/ProductView.cshtml
+++ b/DotNetCore/MVC/ShopEase/Views/Product/ProductView.cshtml
@@ -6,9 +6,9 @@
 
 <style>
     /* .heading {
-            background-color: rgb(113, 168, 175);
-            font-family: Verdana;
-        } */
+                background-color: rgb(113, 168, 175);
+                font-family: Verdana;
+            } */
 
     .table {
         width: 600px;
@@ -24,7 +24,7 @@
 </style>
 
 <body>
-    <form asp-controller="Order" asp-action="PlaceOrder">
+    <form asp-action="ProductSearch">
 
         <h2 class="heading">
             Product View
