--- a/DotNetCore/MVC/ShopEase/Views/Product/View.cshtml
+++ b/DotNetCore/MVC/ShopEase/Views/Product/View.cshtml
@@ -24,7 +24,7 @@
 </style>
 
 <body>
-    <form asp-controller="Order" asp-action="PlaceOrder">
+    <form asp-action="View">
 
         <h2 class="heading">
             Product View
