--- a/DotNetCore/MVC/ShopEase/Views/Product/View.cshtml
+++ b/DotNetCore/MVC/ShopEase/Views/Product/View.cshtml
@@ -65,6 +65,16 @@
                 <td>@Model.SupplierName</td>
             </tr>
             <tr>
+                <td><b>Image:</b></td>
+                <td> <img src="/UploadedFiles/@Model.ImageName" width="60" height="60" /> </td>
+            </tr>
+            <td>
+                <b>Enter Quantity:</b>
+            </td>
+            <td>
+                <input type="text" id="Quantity" name="Quantity" />
+            </td>
+            <tr>
                 <td>
 
                 </td>
