Added Order Controller where we have order place action and AddressRepository for bind DropDown

--- a/DotNetCore/MVC/ShopEase/Views/Product/ProductSearch.cshtml
+++ b/DotNetCore/MVC/ShopEase/Views/Product/ProductSearch.cshtml
@@ -9,6 +9,13 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"> </div>
 
             <span class="text-danger"><b>@ViewBag.ErrorMessage</b></span>
+
+            <span class="text-black"><b>@ViewBag.LoggedInCustomerId</b></span>
+            <br />
+            <span class="text-black"><b>@ViewBag.LoggedInCustomerFullName</b></span>
+            <br />
+            <span class="text-black"><b>@ViewBag.LoggedInCustomerFullEmail</b></span>
+            <br />
             <br />
             <div class="form-group">
                 <label class="control-label"><b>Product Name</b></label>
