Added OrderNumber in orders Table and  added a new action in order controller OrderSummary

--- a/DotNetCore/MVC/ShopEase/Views/Customer/Index.cshtml
+++ b/DotNetCore/MVC/ShopEase/Views/Customer/Index.cshtml
@@ -2,10 +2,7 @@
 
 <h1>Customer Table</h1>
 
-<html>
-<head>
-    <title>Customer Table</title>
-</head>
+<html
 <br />
 <div>
     <b><b><a href="https://localhost:7150/Customer/Register"> Register </a></b></b>
