Added two action MyOrders and OrderDetail in order Controller

--- a/DotNetCore/MVC/ShopEase/Views/Product/Index.cshtml
+++ b/DotNetCore/MVC/ShopEase/Views/Product/Index.cshtml
@@ -7,7 +7,7 @@
 <br />
 <div>
     <b><b><a href="https://localhost:7150/Product/Add"> Add </a></b></b>
-</div
+</div>
 <br />
 <b><label>Total Product:</label>  @ViewBag.productsCount</b>
 <br />
@@ -39,3 +39,4 @@
         </table>
     </form>
 </body>
+</html>
