--- a/DotNetCore/MVC/ShopEase/Views/Product/ProductSearch.cshtml
+++ b/DotNetCore/MVC/ShopEase/Views/Product/ProductSearch.cshtml
@@ -10,11 +10,11 @@
 
             <span class="text-danger"><b>@ViewBag.ErrorMessage</b></span>
 
-            <span class="text-black"><b>@ViewBag.LoggedInCustomerId</b></span>
+            <span class="text-black"><b>@ViewBag.CustomerId</b></span>
             <br />
-            <span class="text-black"><b>@ViewBag.LoggedInCustomerFullName</b></span>
+            <span class="text-black"><b>@ViewBag.CustomerFullName</b></span>
             <br />
-            <span class="text-black"><b>@ViewBag.LoggedInCustomerFullEmail</b></span>
+            <span class="text-black"><b>@ViewBag.CustomerFullEmail</b></span>
             <br />
             <br />
             <div class="form-group">
