--- a/DotNetCore/MVC/ShopEase/Views/Order/OrderSummary.cshtml
+++ b/DotNetCore/MVC/ShopEase/Views/Order/OrderSummary.cshtml
@@ -3,15 +3,19 @@
 <h1>Order Summary</h1>
 <br />
 <span class="success-msg"><b>@ViewBag.ErrorMessage</b></span>
-<div>
-    <p><b>Order Number: @Model.OrderNumber </b></p>
-    <p><b>Paid Amount: @Model.Price </b></p>
-    <p><b>Order Date: @Model.OrderDate </b></p>
-    <p><b>Customer Name: @Model.FullName </b></p>
-    <p><b>Address: @Model.AddressLine1 @("-") 
-                @Model.AddressLine2 @("-") 
-                @Model.PinCode @("-") @Model.CountryName 
-                @("-") @Model.AddressTypeName </b></p>
+<form asp-action="MyOrders">
+    <div>
+        <p><b>Order Number: @Model.OrderNumber </b></p>
+        <p><b>Paid Amount: @Model.Price </b></p>
+        <p><b>Order Date: @Model.OrderDate </b></p>
+        <p><b>Customer Name: @Model.FullName </b></p>
+        <p><b>Address: @Model.AddressLine1 @("-") 
+                    @Model.AddressLine2 @("-") 
+                    @Model.PinCode @("-") @Model.CountryName 
+                    @("-") @Model.AddressTypeName </b></p>
+        <br />
+        <img src="/UploadedFiles/@Model.ImageName" alt="Product Image" style="float: right; width: 200px; height: 200px; ">
+    </div>
     <br />
-    <img src="/UploadedFiles/@Model.ImageName" alt="Product Image" style="float: right; width: 200px; height: 200px; ">
-</div>
+    <input type="submit" value="MyOrder" class="btn btn-primary" />
+</form>
