--- a/DotNetCore/MVC/ShopEase/Views/Shared/_Layout.cshtml
+++ b/DotNetCore/MVC/ShopEase/Views/Shared/_Layout.cshtml
@@ -37,6 +37,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Login"><b>Login</b></a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Order" asp-action="MyOrder"><b>My Order</b></a>
+                        </li>
                     </ul>
                 </div>
             </div>
