Fixed My order action and code refactoring in order repository

--- a/DotNetCore/MVC/ShopEase/Views/Order/OrderDetail.cshtml
+++ b/DotNetCore/MVC/ShopEase/Views/Order/OrderDetail.cshtml
@@ -43,7 +43,7 @@
             </tr>
             <tr>
                 <td><b>Image:</b></td>
-                <td> <img src="/UploadedFiles/@Model.ImageName" width="60" height="60" /> </td>
+                <td><a href="https://localhost:7150/Product/View/@Model.ImageName"> <img src="/UploadedFiles/@Model.ImageName" width="60" height="60" /></a></td>
             </tr>
             <tr>
                 <td><b>Address:</b></td>
