--- a/DotNetCore/MVC/ShopEase/Views/Order/OrderDetail.cshtml
+++ b/DotNetCore/MVC/ShopEase/Views/Order/OrderDetail.cshtml
@@ -1,4 +1,4 @@
-﻿@model ShopEase.ViewModels.OrderSummaryDetailVm
+﻿@model ShopEase.ViewModels.OrderDetailVm
 
 <html>
 
@@ -43,7 +43,7 @@
             </tr>
             <tr>
                 <td><b>Image:</b></td>
-                <td><a href="https://localhost:7150/Product/View/@Model.ImageName"> <img src="/UploadedFiles/@Model.ImageName" width="60" height="60" /></a></td>
+                <td><a href="https://localhost:7150/Product/View?imageName=@Model.ImageName"> <img src="/UploadedFiles/@Model.ImageName" width="60" height="60" /></a></td>
             </tr>
             <tr>
                 <td><b>Address:</b></td>
