--- a/DotNetCore/MVC/ShopEase/Views/Order/OrderDetail.cshtml
+++ b/DotNetCore/MVC/ShopEase/Views/Order/OrderDetail.cshtml
@@ -41,10 +41,19 @@
                 <td><b>Product Name:</b></td>
                 <td>@Model.ProductName</td>
             </tr>
-            <tr>
+            @* <tr>
                 <td><b>Image:</b></td>
                 <td><a href="https://localhost:7150/Product/View?imageName=@Model.ImageName"> <img src="/UploadedFiles/@Model.ImageName" width="60" height="60" /></a></td>
+            </tr> *@
+            <tr>
+                <td><b>Image:</b></td>
+                <td>
+                    <a href="@Url.Action("View", "Product", new { id = Model.ImageName })">
+                        <img src="/UploadedFiles/@Model.ImageName" width="60" height="60" />
+                    </a>
+                </td>
             </tr>
+
             <tr>
                 <td><b>Address:</b></td>
                 <td>
