--- a/DotNetCore/MVC/ShopEase/Views/Shared/_Layout.cshtml
+++ b/DotNetCore/MVC/ShopEase/Views/Shared/_Layout.cshtml
@@ -34,9 +34,15 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Customer" asp-action="Index"><b>Customer</b></a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Login"><b>Login</b></a>
-                        </li>
+                        @{
+                            int? customerId = Convert.ToInt32(Context.Session.GetInt32("CustomerId"));
+                        }
+                        @if (customerId == null || customerId <= 0)
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Login"><b>Login</b></a>
+                            </li>
+                        }
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Order" asp-action="MyOrder"><b>My Order</b></a>
                         </li>
