Removed Navigation Bar link on UI and add LogOut action in AccountController

--- a/DotNetCore/MVC/ShopEase/Views/Order/MyOrder.cshtml
+++ b/DotNetCore/MVC/ShopEase/Views/Order/MyOrder.cshtml
@@ -3,6 +3,12 @@
 <html>
 <br />
     <body>
+        <td style="text-align: right;">
+            <div style="margin-left: 150px;">
+                <b>My Order</b>
+            </div>
+        </td>
+    <br />
         <form>
             <table border="3px" class="table">
                 <tr class="table1">
