--- a/DotNetCore/MVC/ShopEase/Views/Account/Login.cshtml
+++ b/DotNetCore/MVC/ShopEase/Views/Account/Login.cshtml
@@ -21,7 +21,7 @@
             <br />
             <div class="form-group">
                 <label asp-for="Password" class="control-label"><b>Password</b></label>
-                <input asp-for="Password" class="form-control" />
+                <input asp-for="Password" type="password" class="form-control" name="Password" />
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
             <br />
