--- a/DotNetCore/MVC/ShopEase/Views/Customer/Edit.cshtml
+++ b/DotNetCore/MVC/ShopEase/Views/Customer/Edit.cshtml
@@ -2,51 +2,38 @@
 
 <html>
 
-<style>
-
-    .table {
-        width: 600px;
-        font-size: medium;
-        font-family: sans-serif;
-        border-collapse: collapse;
-    }
-
-        .table td {
-            border: 2px solid black;
-            padding: 4px;
-        }
-</style>
-
 <h1> Customer Edit </h1>
-<body>
-    <table class="table" style="width:600px;">
-        <tr class="table1"> </tr>
-        <form asp-action="Update">
-            <label style="visibility:hidden;" for="id">Id:</label><br>
-            <input style="visibility:hidden;" type="text" id="id" name="id" value="@Model.Id"><br>
+    <body>
+        <table class="table" style="width:600px;">
+            <tr class="table1"> </tr>
+            <form asp-action="Update">
+                <label style="visibility:hidden;" for="id">Id:</label><br>
+                <input style="visibility:hidden;" type="text" id="id" name="id" value="@Model.Id"><br>
 
-            <label for="FullName"><b>Full Name:</b></label><br>
-            <input type="text" id="FullName" name="FullName" value="@Model.FullName"><br>
-            <br />
-            <label for="gender"><b>Gender:</b></label><br>
-            <input type="text" id="gender" name="gender" value="@Model.Gender"><br>
-            <br />
-            <label for="Email"><b>Email:</b></label><br>
-            <input type="text" id="Email" name="Email" value="@Model.Email"><br>
-            <br />
-            <label for="Password"><b>Password:</b></label><br>
-            <input type="text" id="Password" name="Password" value="@Model.Password"><br>
-            <br />
-            <label for="Mobile"><b>Mobile:</b></label><br>
-            <input type="text" id="Mobile" name="Mobile" value="@Model.Mobile"><br><br>
-         
-            <input type="submit" value="Update" class="btn btn-primary" />
-            <br />
-            <br />
-            <input type="submit" value="Cancel" class="btn btn-primary" />
-        </form>
-    </table>
-    </>
-</body>
+                <tr>
+                    <td><label for="FullName"><b>Full Name:</b></label></td>
+                    <td><input type="text" id="FullName" name="FullName" value="@Model.FullName"></td>
+                </tr>
+                <tr>
+                    <td><label for="gender"><b>Gender:</b></label></td>
+                    <td><input type="text" id="gender" name="gender" value="@Model.Gender"></td>
+                </tr>
+                <tr>
+                    <td><label for="Email"><b>Email:</b></label></td>
+                    <td><input type="text" id="Email" name="Email" value="@Model.Email" disabled></td>
+                </tr>
+                <tr>
+                    <td><label for="Mobile"><b>Mobile:</b></label></td>
+                    <td><input type="text" id="Mobile" name="Mobile" value="@Model.Mobile"></td>
+                </tr>
+                <tr>
+                    <td colspan="2" class="button-container">
+                        <input type="submit" value="Update" class="btn btn-primary" />
+                        <input type="submit" value="Cancel" class="btn btn-primary" />
+                    </td>
+                </tr>
+            </form>
+        </table>
+    </body>
 
 </html>
