--- a/DotNetCore/MVC/ShopEase/Views/Customer/Register.cshtml
+++ b/DotNetCore/MVC/ShopEase/Views/Customer/Register.cshtml
@@ -33,6 +33,11 @@
             </div>
             <br />
             <div class="form-group">
+                <label asp-for="Password" class="control-label"><b>Password</b></label>
+                <input asp-for="Password" class="form-control" />
+                <span asp-validation-for="Password" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Add" class="btn btn-primary" />
             </div>
         </form>
