--- a/DotNetCore/MVC/ShopEase/Views/Customer/Register.cshtml
+++ b/DotNetCore/MVC/ShopEase/Views/Customer/Register.cshtml
@@ -21,9 +21,12 @@
             </div>
             <br />
             <div class="form-group">
-                <label asp-for="Gender" class="control-label"><b>Gender</b></label>
-                <input asp-for="Gender" class="form-control" />
-                <span asp-validation-for="Gender" class="text-danger"></span>
+                <label><b>Gender:</b></label><br />
+                @Html.RadioButtonFor(model => model.Gender, "Male") Male
+                @Html.RadioButtonFor(model => model.Gender, "Female") Female
+                @Html.RadioButtonFor(model => model.Gender, "Transgender") Transgender
+                @Html.RadioButtonFor(model => model.Gender, "Others") Others
+                @Html.ValidationMessageFor(model => model.Gender)
             </div>
             <br />
             <div class="form-group">
