--- a/DotNetCore/MVC/ShopEase/Views/Order/PlaceOrder.cshtml
+++ b/DotNetCore/MVC/ShopEase/Views/Order/PlaceOrder.cshtml
@@ -18,7 +18,7 @@
             <br />
             <div class="form-group">
                 <label class="control-label"><b>Address</b></label>
-                @Html.DropDownListFor(model => model.AddressId, ViewBag.Addresses as SelectList, "-- Select --", new { @class = "form-control" })
+                @Html.DropDownListFor(model => model.AddressId, ViewBag.Address as SelectList, "-- Select --", new { @class = "form-control" })
             </div>
             <br />
             <div class="form-group">
