--- a/DotNetCore/MVC/ShopEase/Views/Customer/Edit.cshtml
+++ b/DotNetCore/MVC/ShopEase/Views/Customer/Edit.cshtml
@@ -32,6 +32,33 @@
                     <td><input type="text" id="Mobile" name="Mobile" value="@Model.Mobile"></td>
                 </tr>
                 <tr>
+                    <td><label for="AddressTypeId"><b>Address Type:</b></label></td>
+                    <td>
+                        @Html.DropDownListFor(model => model.AddressTypeId, (SelectList)ViewBag.AddressTypes, "-- Select --", new { @class = "form-control" })
+                        @Html.ValidationMessageFor(model => model.AddressTypeId, "", new { @class = "text-danger" })
+                    </td>
+                </tr>
+                <tr>
+                    <td><label for="AddressLine1"><b>Address Line1:</b></label></td>
+                    <td><textarea id="AddressLine1" name="AddressLine1">@Model.AddressLine1</textarea></td>
+                </tr>
+                <tr>
+                    <td><label for="AddressLine2"><b>Address Line2:</b></label></td>
+                    <td><textarea id="AddressLine2" name="AddressLine2">@Model.AddressLine2</textarea></td>
+                </tr>
+                <tr>
+                    <td><label for="PinCode"><b>Pin Code:</b></label></td>
+                    <td><input type="text" id="PinCode" name="PinCode" value="@Model.PinCode"></td>
+                </tr>
+                <tr>
+                    <td><label for="CountryId"><b>Country Name:</b></label></td>
+
+                    <td>
+                        @Html.DropDownListFor(model => model.CountryId, ViewBag.Countries as SelectList, "-- Select --", new { @class = "form-control" })
+                        @Html.ValidationMessageFor(model => model.CountryId, "", new { @class = "text-danger" })
+                    </td>
+                </tr>
+                <tr>
                     <td colspan="2" class="button-container">
                         <input type="submit" value="Update" class="btn btn-primary" />
                         <input type="submit" value="Cancel" class="btn btn-primary" />
