--- a/DotNetCore/MVC/ShopEase/Views/Shared/_Layout.cshtml
+++ b/DotNetCore/MVC/ShopEase/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Index"><b>Product</b></a>
                         </li> *@
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="ProductSearch"><b>Product Search</b></a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="ProductSearch"><b>Search</b></a>
                         </li>
                         @{
                             int? customerId = Convert.ToInt32(Context.Session.GetInt32("CustomerId"));
@@ -38,7 +38,7 @@
                         @if (customerId == null || customerId <= 0)
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Customer" asp-action="Register"><b>Register</b></a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Customer" asp-action="Add"><b>Register</b></a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Login"><b>Login</b></a>
@@ -53,7 +53,7 @@
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Order" asp-action="MyOrder"><b>My Order</b></a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Logout"><b>LogOut</b></a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Logout"><b>Log Out</b></a>
                             </li>
                         }
                     </ul>
