--- a/DotNetCore/MVC/MyWebApp/Views/Product/Add.cshtml
+++ b/DotNetCore/MVC/MyWebApp/Views/Product/Add.cshtml
@@ -32,15 +32,11 @@
             <br/>   
             
             
-            
             <div class="form-group">
-                <label for="MyId"><b>Product Size</b></label>
-                
+                <label asp-for="MyId"><b>Product Size</b></label>
                 @Html.DropDownListFor(model => model.MyId, ViewBag.ProductSizes as SelectList, "-- Select --", new { @class = "form-control" })
-                
+                @Html.ValidationMessageFor(model => model.MyId, "", new { @class = "text-danger" })
             </div>  
-
-
 
             <br/>
             <div class="form-group">
