--- a/DotNetCore/MVC/MyWebApp/Views/Product/View.cshtml
+++ b/DotNetCore/MVC/MyWebApp/Views/Product/View.cshtml
@@ -6,7 +6,7 @@
 
 <h1>View</h1>
 
-<hr />
+<hr />  
 <html>
 
 <head>
@@ -84,7 +84,7 @@
                 <b>Enter Quantity:</b>
             </td>
             <td>
-                <input type="text" id="Quantity" name="Quantity"
+                <input type="text" id="Quantity" name="Quantity" />
             </td>
             <tr>
                 <td>
@@ -92,7 +92,7 @@
                 </td>
                 <td>
                     <div class="form-group" >
-                        <input type="submit" value="Buy Now" class="btn btn-primary" 
+                        <input type="submit" value="Buy Now" class="btn btn-primary" />
                     </div>
                 </td>
             </tr>
