--- a/DotNetCore/MVC/ImageUpload/Views/Shared/_Layout.cshtml
+++ b/DotNetCore/MVC/ImageUpload/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Upload" asp-action="Index">Upload</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Upload" asp-action="Add">Add Product</a>
                         </li>
                     </ul>
                 </div>
