--- a/DotNetCore/MVC/ImageUpload/Views/Upload/Add.cshtml
+++ b/DotNetCore/MVC/ImageUpload/Views/Upload/Add.cshtml
@@ -6,7 +6,7 @@
     @* <div class="@(await GetContainerClass())"> *@
     <div class="card card-custom gutter-b">
         <div class="card-body">
-            <form asp-action="Index" enctype="multipart/form-data">
+            <form asp-action="Add" enctype="multipart/form-data">
                 <div class="form-group">
                     <label for="ProductName">Product Name</label>
                     <input class="form-control" type="text" id="ProductName" name="ProductName" required>
